[package]
name = "rsomics-kpss-test"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Kwiatkowski-Phillips-Schmidt-Shin (KPSS) stationarity test (statsmodels kpss equivalent)"
readme = "README.md"
repository = "https://github.com/omics-rust/rsomics-kpss-test"

[[bin]]
name = "rsomics-kpss-test"
path = "src/main.rs"

[lib]
name = "rsomics_kpss_test"
path = "src/lib.rs"

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kpss"
harness = false
